skills window added. Looks good on desktop and mobile now

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,17 +1,15 @@
 <div class="container-fluid content-window">
+	<div class="row" style="text-align: center; margin: 2% 0 2% 0">
+		<img id="title-img" src="assets/images/Summary-01.jpg">
+	</div>
 	<div class="row content-section color-light">
 		<h3 class="heading-white">Summary</h3>
 		<p class="content">I love finding new ways to deliver content and develop a unique user experience. I have a strong background in Javascript and experience developing applications that allow users to connect and have a shared experience in a product. I've worked on the full stack of multiplayer virtual reality gaming, video streaming, mobile social media, dynamic data visualization, and more. I love solving puzzles and puzzling algorithms, and outside of the "programming job" I enjoy exploring artificial intelligence and machine learning, virtual reality, video and music sharing, and game development. </p>
 		<p class="content">My personal dream is to one day see a connected virtual world where people can enjoy immersive experiences together in group settings with activities such as games, movies, music, and social media. To explore that dream, I've recently contributed to a {{#link-to 'portfolio.avalon'}}virtual reality multiplayer game{{/link-to}} as well as a {{#link-to 'portfolio.reeltime'}}group P2P video watching experience{{/link-to}}. To take things further, one of my {{#link-to 'portfolio.inprogress'}}current personal projects{{/link-to}} seeks bring Twitch video streaming and the VR experience together.</p>
 	</div>
-	<div class="row content-section colorB">
-		<h3 class="heading">Skills</h3>
-		<p> content </p>
-		<p> content </p>
-		<p> content </p>
-		<p> content </p>
-		<p> content </p>
-
+	<div class="row content-section color-secondary-faded">
+		<h3 class="heading-white">Skills</h3>
+		{{skills-window class='container-fluid'}}
 	</div>
 	<div class="row content-section color-main">
 		<h3 class="heading">Personal Site</h3>
