--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -114,6 +114,15 @@ html, body {
 	color: white;
 }
 
+.color-main a {
+	color: white;
+	text-decoration: underline;
+}
+
+.color-main a:hover {
+	color: #7986ac;
+}
+
 .color-light {
 	background: rgba(121, 134, 172, 0.93);
 	color: white;
@@ -128,7 +137,15 @@ html, body {
 	color: #2f4073;
 }
 
-.colorC {}
+.color-secondary {
+	background: rgba(36, 96, 104, 0.93);
+	color: white;
+}
+
+.color-secondary-faded {
+	background: rgba(36, 96, 104, 0.73);
+	color: white;
+}
 
 .colorD {}
 
@@ -155,6 +172,31 @@ html, body {
 	height: 100%;
 }
 
+/******************** INDEX STYLING ************************/
+
+#title-img {
+	height: 300px;
+	border-radius: 15px;
+	opacity: 0.9;
+}
+
+.icons-container {
+	text-align: center;
+	margin-bottom: 1%;
+}
+
+.skill-icon {
+	width: 35%;
+}
+
+.icons-adjustment {
+	padding-top: 1%;
+}
+
+.skill-up {
+	width: 45%;
+}
+
 /******************** MOBILE STYLING ***********************/
 
 @media screen and (max-height: 450px) and (max-width: 767px) {
@@ -179,6 +221,14 @@ html, body {
 		height: auto;
 		overflow: visible;
 		padding: 0 0 0 0;
+	}
+
+	.mobile-skill-adjust-down {
+		width: 25%;
+	}
+
+	.mobile-skill-adjust-up {
+		width: 55%;
 	}
 
 }
