projects window completed and mobile-ready

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -11,6 +11,10 @@
 		<h3 class="heading-white">Skills</h3>
 		{{skills-window class='container-fluid'}}
 	</div>
+	<div class="row content-section color-tertiary">
+		<h3 class="heading-white">{{#link-to 'portfolio'}}Projects{{/link-to}}</h3>
+		{{projects-window class="container-fluid projects-window"}}
+	</div>
 	<div class="row content-section color-main">
 		<h3 class="heading">Personal Site</h3>
 		<p class="content">This website is in progress. It is developed using Ember. <a href="https://github.com/cptran777/portfolio-v2">Github Link</a></p>
