--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -147,7 +147,15 @@ html, body {
 	color: white;
 }
 
-.colorD {}
+.color-tertiary {
+	background: rgba(164, 55, 65, 0.93);
+	color: white;
+}
+
+.color-tertiary-light {
+	background: rgba(205, 103, 113, 0.93);
+	color: white;
+}
 
 .heading {
 	text-align: center;
@@ -159,6 +167,15 @@ html, body {
 	text-align: center;
 	border-bottom: 1px solid white;
 	padding: 0 0 0.5% 0;
+}
+
+.heading-white a {
+	color: white;
+	text-decoration: none;
+}
+
+.heading-white a:hover {
+	text-decoration: underline;
 }
 
 .content {
@@ -197,6 +214,28 @@ html, body {
 	width: 45%;
 }
 
+.project-img {
+	width: 50%;
+	border-radius: 5px;
+}
+
+.other-project-img {
+	width: 90%;
+	margin-bottom: 2%;
+	border-radius: 15px;
+}
+
+.project-row {
+	text-align: center;
+}
+
+.project-block {
+	text-align: center;
+	margin-bottom: 3%;
+	border-radius: 15px;
+	padding-top: 1%;
+}
+
 /******************** MOBILE STYLING ***********************/
 
 @media screen and (max-height: 450px) and (max-width: 767px) {
@@ -229,6 +268,10 @@ html, body {
 
 	.mobile-skill-adjust-up {
 		width: 55%;
+	}
+
+	.other-project-img {
+		width: 50%;
 	}
 
 }
