--- a/app/templates/components/projects-window.hbs
+++ b/app/templates/components/projects-window.hbs
@@ -13,7 +13,7 @@
 	{{/link-to}}
 </div>
 <div class="row project-row">
-	<h4 class="heading">Other</h4>
+	<h4 class="heading-white">Other</h4>
 	{{#link-to 'portfolio.other' class='col-xs-12 col-md-2 col-md-offset-1'}}
 		<img src="/assets/images/Syrup.png" class="other-project-img"/>
 	{{/link-to}}
@@ -25,7 +25,7 @@
 	{{/link-to}}
 </div>
 <div class="row project-row">
-	<h4 class="heading">In - Progress</h4>
+	<h4 class="heading-white">In - Progress</h4>
 	{{#link-to 'portfolio.inprogress' class='col-xs-12 col-md-2 col-md-offset-1'}}
 		<img src="/assets/images/Smite.png" class="other-project-img"/>
 	{{/link-to}}
