--- a/app/templates/portfolio/inprogress.hbs
+++ b/app/templates/portfolio/inprogress.hbs
@@ -1,1 +1,28 @@
+<div class="container-fluid content-window">
+	<div class="row content-section">
+		<h2 class="heading-white">In-Progress Projects</h2>
+	</div>
+	<div class="row content-section color-tertiary" style="text-align: center">
+		<h3 class="heading-white">Twitch on VR</h3>
+		<h4 class="heading-white">Description</h4>
+		<p class="content">Twitch on VR is a personal proof of concept project that aims to combine virtual reality and video streaming, two of my favorite passions. The current project is in web VR using Three.js over WebGL and the Twitch API to search and stream videos. Once this project is completed, I will probably move to programming an actual application using C# and Unity in combination with the Google Daydream SDK for Unity to build the actual app.</p>
+		<h4 class="heading-white">Github</h4>
+		<a href="https://github.com/cptran777/twitch-on-vr">https://github.com/cptran777/twitch-on-vr</a>
+	</div>
+	<div class="row content-section color-light" style="text-align: center">
+		<h3 class="heading-white">Smite Party</h3>
+		<img src="/assets/images/Smite.png" style="width: 35%; border-radius: 20px">
+		<h4 class="heading-white">Description</h4>
+		<p class="content">The Smite Party application is a simple web application that is a companion for groups that play the MOBA game, Smite. A user enters in their name and the names of their current friends playing Smite and the application will return assignments to each player for a randomized team. Since team balance would be an issue, the backend service contains an algorithm that checks for team balance as it assigns each role before finalizing the decision. The front end is built using React with Bootstrap for styling. The idea is to keep the application as lightweight as possible for mobile usage. Since the purpose of the app is to be a companion to a party playing a game, users would be expected to be on mobile.</p>
+		<h4 class="heading-white">Github</h4>
+		<a href="https://github.com/cptran777/smite-party">https://github.com/cptran777/smite-party</a>
+	</div>
+	<div class="row content-section color-secondary" style="text-align: center">
+		<h3 class="heading-white">Pocketmon Dex</h3>
+		<p class="content">Pocketmon Dex is a simple Pokedex web application that will serve as an encyclopedia for various information from the Pokemon series. The application is mostly a fun chance to mess around with Ember since the data from a Pokedex application easily lends itself to being organized into Ember models.</p>
+		<h4 class="heading-white">Github</h4>
+		<a href="https://github.com/cptran777/pocketmondex">https://github.com/cptran777/pocketmondex</a>
+	</div>
+</div>
+
 {{outlet}}
