--- a/app/templates/portfolio/labit.hbs
+++ b/app/templates/portfolio/labit.hbs
@@ -1,1 +1,28 @@
+<div class="container-fluid content-window">
+	<div class="row content-section">
+		<h2 class="heading-white">Laugh About It</h2>
+	</div>
+	<div class="row content-section" style="text-align: center">
+		<img src="/assets/images/Labit.png" class="project-img"/>
+	</div>
+	<div class="row content-section color-main">
+		<h3 class="heading-white">Description</h3>
+		<p class="content">Laugh About It</p>
+	</div>
+	<div class="row content-section color-light">
+		<h3 class="heading-white">Tech Stack</h3>
+		{{labit-techstack}}
+	</div>
+	<div class="row content-section color-secondary">
+		<h3 class="heading-white">Technical Details</h3>
+	</div>
+	<div class="row content-section color-tertiary">
+		<h3 class="heading-white">Gallery</h3>
+	</div>
+	<div class="row content-section color-main" style="text-align: center">
+		<h3 class="heading-white">Github</h3>
+		<a href="https://github.com/laugh-about-it-app">https://github.com/laugh-about-it-app</a>
+	</div>
+</div>
+
 {{outlet}}
