--- a/app/templates/portfolio/other.hbs
+++ b/app/templates/portfolio/other.hbs
@@ -1,1 +1,28 @@
+<div class="container-fluid content-window">
+	<div class="row content-section">
+		<h2 class="heading-white">Other Projects</h2>
+	</div>
+	<div class="row content-section color-secondary" style="text-align: center">
+		<h3 class="heading-white">Recast.ly</h3>
+		<h4 class="heading-white">Description</h4>
+		<p class="heading-white">Recast.ly is a clone of a youtube video player page built using React. The video player itself and the video list are powered by the YouTube API. The search bar up top is connected to a module that makes an API call to YouTube based on the user's query and returns videos on the list component based on the response. All basic functionality is there including play, pause, and autoplay the next song on the playlist. </p>
+		<h4 class="heading-white">Github</h4>
+		<a href="https://github.com/cptran777/recast.ly">https://github.com/cptran777/recast.ly</a>
+	</div>
+	<div class="row content-section color-tertiary" style="text-align: center">
+		<h3 class="heading-white">Syrup Tale</h3>
+		<h4 class="heading-white">Description</h4>
+		<p class="content">Syrup Tale is 2D action sidescrolling game. The project was made in a single day as a prototype test of concept. It was made with a React frontend and uses EaselJS and PreloadJS from the CreateJS library suite to render and animate the sprites and the game logic is written by hand in JS. There will probably be a Syrup Tale 2.0 at some point that expands on this idea and makes a full fledged game out of it.</p>
+		<h4 class="heading-white">Github</h4>
+		<a href="https://github.com/cptran777/syruptale">https://github.com/cptran777/syruptale</a>
+	</div>
+	<div class="row content-section color-main" style="text-align: center">
+		<h3 class="heading-white">Music VR Experiment</h3>
+		<h4 class="heading-white">Description</h4>
+		<p class="content">A small application to test many features in Three.js. The final iteration is a virtual reality on web VR that plays music and reads data available from the HTML 5 web audio API and translate frequency data into a bouncing bars effect.</p>
+		<h4 class="heading-white">Github</h4>
+		<a href="https://github.com/cptran777/threejspractice">https://github.com/cptran777/threejspractice</a>
+	</div>
+</div>
+
 {{outlet}}
