added back ability to scroll to top through base route. also working on music player component

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -273,6 +273,12 @@ html, body {
 	margin-bottom: 3%;
 }
 
+/****************** INTERESTS STYLING **********************/
+
+.tech-interests {
+	padding: 0 0 0 0;
+}
+
 /******************** MOBILE STYLING ***********************/
 
 @media screen and (max-height: 450px) and (max-width: 767px) {
