--- a/app/templates/components/music-player.hbs
+++ b/app/templates/components/music-player.hbs
@@ -1,1 +1,22 @@
+<div class="col-xs-4 col-md-4" style="text-align: center">
+	<div class="content song-button" {{action 'setVid' 'MLeIyy2ipps'}}>Shinedown</div>
+	<div class="content song-button" {{action 'setVid' 'ZSS5dEeMX64'}}>Disney</div>
+	<div class="content song-button" {{action 'setVid' 'e-ORhEE9VVg'}}>T Swift</div>
+	<div class="content song-button" {{action 'setVid' 'SSR6ZzjDZ94'}}>Boston</div>
+	<div class="content song-button" {{action 'setVid' 'sZfZ8uWaOFI'}}>Aerosmith</div>
+	<div class="content song-button" {{action 'setVid' 'KrZHPOeOxQQ'}}>Bon Jovi</div>
+	<div class="content song-button" {{action 'setVid' 'kPBzTxZQG5Q'}}>Three Doors Down</div>
+</div>
+<div class="col-xs-4 col-md-4" style="text-align: center">
+	<iframe src={{concat "https://www.youtube.com/embed/" videoId}} style="width: 100%; height: 100%"></iframe>
+</div>
+<div class="col-xs-4 col-md-4" style="text-align: center">
+	<div class="content song-button" {{action 'setVid' 'YQHsXMglC9A'}}>Adele</div>
+	<div class="content song-button" {{action 'setVid' 'VMnjF1O4eH0'}}>Queen</div>
+	<div class="content song-button" {{action 'setVid' 'IsUsVbTj2AY'}}>Justin Timberlake</div>
+	<div class="content song-button" {{action 'setVid' 'r52o65-0d3g'}}>Drake</div>
+	<div class="content song-button" {{action 'setVid' 'sOnqjkJTMaA'}}>Michael Jackson</div>
+	<div class="content song-button" {{action 'setVid' 'hT_nvWreIhg'}}>One Republic</div>
+	<div class="content song-button" {{action 'setVid' 'ktvTqknDobU'}}>Imagine Dragons</div>
+</div>
 {{yield}}
