--- a/app/templates/interests.hbs
+++ b/app/templates/interests.hbs
@@ -1,1 +1,26 @@
+<div class="container-fluid content-window">
+	<div class="row content-section">
+		<h2 class="heading-white">Interests</h2>
+	</div>
+	<div class="row content-section color-secondary" style="padding: 0 0 0 0">
+		{{tech-interests class="container-fluid tech-interests"}}
+	</div>	
+	<div class="row content-section">
+		<h3 class="heading-white">Music</h3>
+		{{music-player style="width: 100%"}}
+	</div>
+	<div class="row content-section">
+		<h3 class="heading-white">Movies/TV</h3>
+		{{movies-carousel}}
+	</div>
+	<div class="row content-section">
+		<h3 class="heading-white">Games</h3>
+	</div>
+	<div class="row content-section">
+		<h3 class="heading-white">Sports</h3>
+	</div>
+	<div class="row content-section">
+		<h3 class="heading-white">Hobbies</h3>
+	</div>
+</div>
 {{outlet}}
