music player completed

--- a/app/templates/interests.hbs
+++ b/app/templates/interests.hbs
@@ -5,7 +5,7 @@
 	<div class="row content-section color-secondary" style="padding: 0 0 0 0">
 		{{tech-interests class="container-fluid tech-interests"}}
 	</div>	
-	<div class="row content-section">
+	<div class="row content-section color-tertiary" style="padding: 0 0 0 0">
 		<h3 class="heading-white">Music</h3>
 		{{music-player style="width: 100%"}}
 	</div>
