--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -279,6 +279,17 @@ html, body {
 	padding: 0 0 0 0;
 }
 
+.song-button {
+	background: rgba(141, 124, 178, 0.91);
+	margin-bottom: 1%;
+	border-radius: 5px;
+}
+
+.song-button:hover {
+	background: rgba(102, 81, 148, 1);
+	color: #190740;
+}
+
 /******************** MOBILE STYLING ***********************/
 
 @media screen and (max-height: 450px) and (max-width: 767px) {
