--- a/app/templates/components/music-player.hbs
+++ b/app/templates/components/music-player.hbs
@@ -1,4 +1,4 @@
-<div class="col-xs-4 col-md-4" style="text-align: center">
+<div class="col-xs-12 col-md-4" style="text-align: center; margin-bottom: 1%">
 	<div class="content song-button" {{action 'setVid' 'MLeIyy2ipps'}}>Shinedown</div>
 	<div class="content song-button" {{action 'setVid' 'ZSS5dEeMX64'}}>Disney</div>
 	<div class="content song-button" {{action 'setVid' 'e-ORhEE9VVg'}}>T Swift</div>
@@ -7,10 +7,10 @@
 	<div class="content song-button" {{action 'setVid' 'KrZHPOeOxQQ'}}>Bon Jovi</div>
 	<div class="content song-button" {{action 'setVid' 'kPBzTxZQG5Q'}}>Three Doors Down</div>
 </div>
-<div class="col-xs-4 col-md-4" style="text-align: center">
+<div class="col-xs-12 col-md-4" style="text-align: center; margin-bottom: 1%">
 	<iframe src={{concat "https://www.youtube.com/embed/" videoId}} style="width: 100%; height: 100%"></iframe>
 </div>
-<div class="col-xs-4 col-md-4" style="text-align: center">
+<div class="col-xs-12 col-md-4" style="text-align: center; margin-bottom: 1%">
 	<div class="content song-button" {{action 'setVid' 'YQHsXMglC9A'}}>Adele</div>
 	<div class="content song-button" {{action 'setVid' 'VMnjF1O4eH0'}}>Queen</div>
 	<div class="content song-button" {{action 'setVid' 'IsUsVbTj2AY'}}>Justin Timberlake</div>
