--- a/app/templates/interests.hbs
+++ b/app/templates/interests.hbs
@@ -9,7 +9,7 @@
 		<h3 class="heading-white">Music</h3>
 		{{music-player style="width: 100%"}}
 	</div>
-	<div class="row content-section">
+	<div class="row content-section color-main" style="padding: 0 0 0 0">
 		<h3 class="heading-white">Movies/TV</h3>
 		{{movies-carousel}}
 	</div>
