--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -290,6 +290,17 @@ html, body {
 	color: #190740;
 }
 
+.carousel-item {
+	text-align: center;
+}
+
+.carousel-img {
+	width: 400px;
+	height: 300px;
+	max-width: 100%;
+	border-radius: 20px;
+}
+
 /******************** MOBILE STYLING ***********************/
 
 @media screen and (max-height: 450px) and (max-width: 767px) {
