--- a/app/templates/interests.hbs
+++ b/app/templates/interests.hbs
@@ -13,13 +13,13 @@
 		<h3 class="heading-white">Movies/TV</h3>
 		{{movies-carousel}}
 	</div>
-	<div class="row content-section">
+	<div class="row content-section color-light" style="padding: 0 0 0 0">
 		<h3 class="heading-white">Games</h3>
 	</div>
-	<div class="row content-section">
+	<div class="row content-section color-secondary" style="padding: 0 0 0 0">
 		<h3 class="heading-white">Sports</h3>
 	</div>
-	<div class="row content-section">
+	<div class="row content-section color-tertiary" style="padding: 0 0 0 0">
 		<h3 class="heading-white">Hobbies</h3>
 	</div>
 </div>
