add tech stack windows for relltime and labit

--- a/app/templates/components/labit-techstack.hbs
+++ b/app/templates/components/labit-techstack.hbs
@@ -1,1 +1,22 @@
+<div class="row skill-row">
+	<div class="col-xs-6 col-md-2 icons-container">
+		<img src="http://www.appcoda.com/wp-content/uploads/2015/04/react-native.png" class="skill-icon" id="react-native-icon"/>
+	</div>
+	<div class="col-xs-6 col-md-2 icons-container">
+		<img src="http://imminger.me/osx-icons/Android-Studio.png" class="skill-icon"/>
+	</div>
+	<div class="col-xs-6 col-md-2 icons-container">
+		<img src="https://upload.wikimedia.org/wikipedia/en/0/0c/Xcode_icon.png" class="skill-icon"/>
+	</div>
+	<div class="col-xs-6 col-md-2 icons-container">
+		<img src="https://camo.githubusercontent.com/6c85b8e12a64c5d7150873d6d38c193a611e7fa8/687474703a2f2f636f64652d6d6176656e2e636f6d2f696d672f6e6f64652e706e67" class="skill-icon skill-up"/>
+	</div>
+	<div class="col-xs-6 col-md-2 icons-container">
+		<img src="http://nodejs-cloud.com/img/128px/expressjs.png" class="skill-icon"/>
+	</div>
+	<div class="col-xs-6 col-md-2 icons-container">
+		<img src="http://orig15.deviantart.net/d72a/f/2010/175/7/4/simple_mysql_icon_by_xaleph.png" class="skill-icon"/>
+	</div>
+</div>
+
 {{yield}}
