--- a/app/templates/components/reeltime-techstack.hbs
+++ b/app/templates/components/reeltime-techstack.hbs
@@ -1,1 +1,22 @@
+<div class="row skill-row">
+	<div class="col-xs-6 col-md-2 icons-container">
+		<img src="https://techchronos.com/wp-content/uploads/SszarkLabs/stack-icon/cywBkaGwkMeDAuJbSt1k.png" class="skill-icon"/>
+	</div>
+	<div class="col-xs-6 col-md-2 icons-container">
+		<img src="https://camo.githubusercontent.com/6c85b8e12a64c5d7150873d6d38c193a611e7fa8/687474703a2f2f636f64652d6d6176656e2e636f6d2f696d672f6e6f64652e706e67" class="skill-icon skill-up"/>
+	</div>
+	<div class="col-xs-6 col-md-2 icons-container">
+		<img src="http://nodejs-cloud.com/img/128px/expressjs.png" class="skill-icon"/>
+	</div>
+	<div class="col-xs-6 col-md-2 icons-container">
+		<img src="https://lh4.ggpht.com/i5V5IeZyYuOnkLuNx8UewwvPx1DeGbMTj5krkecFThuRfvLFzhGpr2x79VfVLwt4fw=w170" class="skill-icon"/>
+	</div>
+	<div class="col-xs-6 col-md-2 icons-container">
+		<img src="https://webrtc.org/assets/images/webrtc-logo-vert-retro-dist.svg" class="skill-icon"/>
+	</div>
+	<div class="col-xs-6 col-md-2 icons-container">
+		<img src="https://www.twilio.com/marketing/bundles/marketing/img/favicons/favicon.ico" class="skill-icon"/>
+	</div>
+</div>
+
 {{yield}}
