--- a/app/templates/components/skills-window.hbs
+++ b/app/templates/components/skills-window.hbs
@@ -29,7 +29,7 @@
 		<img src="http://www.appcoda.com/wp-content/uploads/2015/04/react-native.png" class="skill-icon mobile-skill-adjust-up"/>
 	</div>
 	<div class="col-xs-6 col-md-2 icons-container">
-		<img src="https://camo.githubusercontent.com/6c85b8e12a64c5d7150873d6d38c193a611e7fa8/687474703a2f2f636f64652d6d6176656e2e636f6d2f696d672f6e6f64652e706e67" class="skill-icon"/>
+		<img src="https://camo.githubusercontent.com/6c85b8e12a64c5d7150873d6d38c193a611e7fa8/687474703a2f2f636f64652d6d6176656e2e636f6d2f696d672f6e6f64652e706e67" class="skill-icon skill-up"/>
 	</div>
 	<div class="col-xs-6 col-md-2 icons-container">
 		<img src="http://nodejs-cloud.com/img/128px/expressjs.png" class="skill-icon"/>
