removed background to temporarily make it look a little cleaner

--- a/app/templates/portfolio/index.hbs
+++ b/app/templates/portfolio/index.hbs
@@ -1,28 +1,28 @@
 <div class="row content-section">
-	<h1 class="heading-white">Portfolio</h1>
+	<h1 class="heading">Portfolio</h1>
 </div>
 <div class="row content-section">
-	<h3 class="heading-white">
+	<h3 class="heading">
 		{{#link-to 'portfolio.avalon'}}Avalon{{/link-to}}
 	</h3>
 </div>
 <div class="row content-section">
-	<h3 class="heading-white">
+	<h3 class="heading">
 		{{#link-to 'portfolio.reeltime'}}Reel Time{{/link-to}}
 	</h3>
 </div>
 <div class="row content-section">
-	<h3 class="heading-white">
+	<h3 class="heading">
 		{{#link-to 'portfolio.labit'}}Laugh About It{{/link-to}}
 	</h3>
 </div>
 <div class="row content-section">
-	<h3 class="heading-white">
+	<h3 class="heading">
 		{{#link-to 'portfolio.other'}}Other Projects{{/link-to}}
 	</h3>	
 </div>
 <div class="row content-section">
-	<h3 class="heading-white">
+	<h3 class="heading">
 		{{#link-to 'portfolio.inprogress'}}In Progress Projects{{/link-to}}
 	</h3>
 </div>
