--- a/app/templates/portfolio/other.hbs
+++ b/app/templates/portfolio/other.hbs
@@ -1,6 +1,6 @@
 <div class="container-fluid content-window">
 	<div class="row content-section">
-		<h2 class="heading-white">Other Projects</h2>
+		<h2 class="heading">Other Projects</h2>
 	</div>
 	<div class="row content-section color-secondary" style="text-align: center">
 		<h3 class="heading-white">Recast.ly</h3>
