--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -183,6 +183,7 @@ html, body {
 	text-align: center;
 	border-bottom: 1px solid black;
 	padding: 0 0 0.5% 0;
+	color: black;
 }
 
 .heading-white {
@@ -190,6 +191,16 @@ html, body {
 	border-bottom: 1px solid white;
 	padding: 0 0 0.5% 0;
 	color: white;
+}
+
+.heading a {
+	color: black;
+	text-decoration: none;
+}
+
+.heading a:hover {
+	color: black;
+	text-decoration: underline;
 }
 
 .heading-white a {
@@ -208,7 +219,7 @@ html, body {
 
 #app-body {
 	overflow: auto;
-	background-image: url("http://core0.staticworld.net/images/article/2015/08/virtual_reality_football_headset_gloves_primary-100602296-primary.idge.jpg");
+	/*background-image: url("http://core0.staticworld.net/images/article/2015/08/virtual_reality_football_headset_gloves_primary-100602296-primary.idge.jpg");*/
 	background-size: 100% 100%;
 	height: 100%;
 }
