--- a/app/templates/portfolio/avalon.hbs
+++ b/app/templates/portfolio/avalon.hbs
@@ -1,6 +1,6 @@
 <div class="container-fluid content-window" style="padding: 0 0 0 0">
 	<div class="row content-section">
-		<h2 class="heading-white">Avalon</h2>
+		<h2 class="heading">Avalon</h2>
 	</div>
 	<div class="row content-section" style="text-align: center">
 		<img src="/assets/images/Avalon.png" class="project-img"/>
