--- a/app/templates/portfolio/inprogress.hbs
+++ b/app/templates/portfolio/inprogress.hbs
@@ -1,6 +1,6 @@
 <div class="container-fluid content-window">
 	<div class="row content-section">
-		<h2 class="heading-white">In-Progress Projects</h2>
+		<h2 class="heading">In-Progress Projects</h2>
 	</div>
 	<div class="row content-section color-tertiary" style="text-align: center">
 		<h3 class="heading-white">Twitch on VR</h3>
