--- a/app/templates/portfolio/reeltime.hbs
+++ b/app/templates/portfolio/reeltime.hbs
@@ -1,6 +1,6 @@
 <div class="container-fluid content-window">
 	<div class="row content-section">
-		<h2 class="heading-white">Reel Time</h2>
+		<h2 class="heading">Reel Time</h2>
 	</div>
 	<div class="row content-section" style="text-align: center">
 		<img src="/assets/images/ReelTime.png" class="project-img"/>
